--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "next": "12.3.1",
     "next-images": "^1.8.4",
